--- a/src/assets/summaryVue.scss
+++ b/src/assets/summaryVue.scss
@@ -1,15 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap');
-
-$main-color: #b4bad2;
-$main-gray: rgba(55, 58, 71, 0.47);
-$main-gray-dark: rgba(55, 58, 71, 1);
-$dark-white: #bdc3c7;
-$main-red: #c94e50;
-$gray-gradient: linear-gradient(90deg, rgba(255, 255, 255, 1) 2%, rgba(218, 218, 221, 1) 51%, rgba(55, 58, 71, 0.5158438375350141) 100%);
-$gray-gradient-title: linear-gradient(90deg, rgba(55, 58, 71, 0.48783263305322133) 0%, rgba(218, 218, 221, 0.01) 71%, rgba(225, 225, 225, 0.01) 98%);
-$gray-gradient-subtitle: linear-gradient(90deg, rgba(218, 218, 221, 0.01) 0%, rgba(55, 58, 71, 0.48783263305322133) 50%, rgba(218, 218, 221, 1) 98%);
-$main-white: #fffef6;
-$text-tabs: #646464;
+@import "main-content";
+@import "variable";
+@import "burger-menu";
 
 body {
   box-sizing: border-box;
@@ -34,555 +26,9 @@ body {
   overflow: auto;
 }
 
-//button
 
-.burger-open {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-}
 
-.burger-open_style {
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-
-  i {
-    color: $main-gray-dark;
-  }
-}
-
-.burger-menu__burger-clause {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  //  position: absolute;
-}
-
-.burger-menu__burger-clause_style {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-
-  i {
-    // color: $main-gray;
-    color: $dark-white;
-  }
-}
-
-//panel
-
-.burger-menu {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  height: 100%;
-  // flex-basis: 150px;
-}
-
-.burger-menu_style {
-  background: $main-gray-dark;
-}
-
-.burger-menu__burger-items {
-  list-style: none;
-}
-
-.burger-menu__burger-item_style {
-
-  a {
-    text-decoration: none;
-    display: inline-block;
-    width: 270px;
-    height: 50px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: $main-white;
-    font-weight: bold;
-    font-size: 1.2rem;
-
-    &:hover {
-      i {
-        color: $main-red;
-        transition: color 500ms;
-      }
-    }
-  }
-
-  i {
-    color: $dark-white;
-    margin-right: 10px;
-  }
-
-
-}
-
-//active page
-
-.burger-menu__burger-item_active {
-  i {
-    color: $main-red;
-  }
-}
-
-//main
-
-.main-content {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-content__container {
-  display: flex;
-  flex-direction: row;
-  //flex-wrap: wrap;
-  width: 60%;
-  height: 60%;
-}
-
-//main nav
-
-.main-content__nav-buttons {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
-}
-
-.main-content__nav-buttons_style {
-  a {
-    text-decoration: none;
-
-    &:first-child {
-      border-radius: 10% 10% 0 0;
-    }
-
-    &:last-child {
-      border-radius: 0 0 10% 10%;
-    }
-
-    &:hover {
-      i {
-        color: $main-red;
-        transition: color 500ms;
-      }
-    }
-  }
-}
-
-.main-content__item-button {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-content__item-button_style {
-  background: $main-white;
-  padding: 10px;
-  color: $main-gray;
-  font-weight: 400;
-  position: relative;
-
-  i {
-    padding-bottom: 5px;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    height: 0.5px;
-    width: 100%;
-    background: $gray-gradient;
-    z-index: 999;
-  }
-}
-
-
-//active tab
-
-.main-content__item-button_active {
-  i {
-    color: $main-red;
-  }
-}
-
-//main photo
-
-.main-content__profile-photo {
-  display: flex;
-  flex-direction: column;
-  height: 550px;
-}
-
-.main-content__profile-photo_style {
-  background: $main-white;
-  margin-left: 10px;
-  border-radius: 5px;
-  position: relative;
-
-
-  &:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    background: rgba(201, 78, 80, 0.2);
-    right: 15px;
-    bottom: 20px;
-    z-index: -999;
-  }
-}
-
-.main-content__photo {
-  min-width: 300px;
-  // height: 80%;
-  min-height: 70%;
-}
-
-.main-content__photo_style {
-  background-image: url("https://sun2.beltelecom-by-minsk.userapi.com/yvFYbYHwDOHAyJtfE3u6WNbJZ0ZGd8Fg_-DyYA/giaYt8-5Gss.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  border-radius: inherit;
-  position: relative;
-
-  svg {
-    position: absolute;
-
-    &:first-child {
-      bottom: -1px;
-      left: -1px;
-    }
-
-    &:last-child {
-      bottom: -1px;
-      right: -1px;
-    }
-  }
-}
-
-.main-content__short-profile {
-  z-index: 999;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.main-content__short-profile_style {
-  background: $main-white;
-  color: $main-gray;
-  padding: 10% 0 10% 0;
-}
-
-.main-content__short-profile_name {
-  font-weight: 600;
-  font-size: 1.7rem;
-  margin: 5%;
-}
-
-.main-content__short-profile_profession {
-  margin: 0px;
-  font-weight: 800;
-  font-size: 0.9rem;
-  color: $main-red;
-}
-
-.main-content__short-contact {
-  display: flex;
-  flex-direction: row;
-  padding-top: 5%;
-}
-
-.main-content__short-contact-item {
-  padding: 5px;
-}
-
-.main-content__short-contact_style {
-  a {
-    color: $main-gray;
-
-    &:hover {
-      color: $main-red;
-      transition: color 500ms;
-    }
-  }
-}
-
-//main tabs
-
-.main-content__effect-tabs{
-  display: flex;
-  overflow: hidden;
-  //min-height: 500px;
-}
-
-.main-content__tabs {
-  flex-grow: 1;
-  //z-index: 999;
-  //min-height: 500px;
-  overflow: scroll;
-  display: flex;
-  flex-direction: column;
-  //max-height: 700px;
-  height: 500px;
-}
-
-.main-content__tabs_style {
-  background: $main-white;
-  margin: 20px 0 20px 0;
-  border-radius: 0 5px 5px 0;
-  padding: 10px;
-  color: $text-tabs;
-  font-size: 1.1em;
-  font-weight: 400;
-  //z-index: -999;
-
-  a {
-    color: $main-red;
-  }
-
-  p {
-    padding: 20px 0;
-    margin: 0;
-  }
-
-  ul {
-    list-style: none;
-    margin: 0;
-    padding-top: 20px;
-    //  padding-left: 20px;
-
-    li {
-      padding: 5px 0;
-
-      i {
-        padding: 5px;
-        color: $main-red;
-      }
-    }
-  }
-}
-
-.main-content__tab_content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.main-content__item {
-  flex: 50%;
-}
-
-
-.main-content__tab_title {
-  font-size: 1.6rem;
-  font-weight: 800;
-  color: $main-gray;
-  padding: 10px 0;
-  position: relative;
-
-  span {
-    // background:rgba(201, 78, 80, 0.2);
-    color: $main-red;
-    position: relative;
-
-    &:before {
-      content: ' ';
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      background: linear-gradient(90deg, rgba(201, 78, 80, 0.3) 0%, rgba(201, 78, 80, 0) 100%);
-      border-radius: 50%;
-    }
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: -10px;
-    height: 0.5px;
-    width: 100%;
-    background: $gray-gradient-title;
-  }
-}
-
-.main-content__tab_subtitle {
-  font-size: 1.5rem;
-  color: $main-gray;
-  font-weight: 600;
-  padding: 20px 0;
-  position: relative;
-
-  i {
-    padding-right: 10px;
-    padding-left: 10px;
-    color: $main-red;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: -10px;
-    height: 0.5px;
-    width: 90%;
-    background: $gray-gradient-subtitle;
-  }
-
-}
-
-.main-content__tab_title-contact {
-  margin-top: 20px;
-  span {
-    background: $main-red;
-    color: $main-white;
-    border-radius: 3px;
-    padding: 2px 5px;
-    font-weight: 600;
-  }
-}
-.main-content__item_img-project{
-  img{
-    width: 95%;
-    min-width: 200px;
-  }
-
-}
-
-.main-content__item_color-gray {
-  color: $main-gray;
-  font-weight: 500;
-}
-
-.main-content__item_contact-width{
-  min-width: 200px;
-}
-
-.main-content__item_full-flex {
-  flex: 100%;
-}
-
-.main-content__item_formstyle {
-  margin: 20px 0;
-  display: flex;
-  flex-direction: column;
-
-
-  button {
-    width: 170px;
-    height: 50px;
-    border: none;
-    background: #eeeeee;
-    color: $main-gray;
-    font-weight: 600;
-
-    &:hover {
-      color: $main-red;
-      transition: color 500ms;
-    }
-  }
-}
-
-.main-content__name-form {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-
-  input {
-    width: 40%;
-    min-width: 200px;
-    height: 35px;
-    border: 2px solid #eeeeee;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
-}
-
-.main-content__message-form {
-  margin-bottom: 20px;
-
-  textarea {
-    width: 100%;
-    border: 2px solid #eeeeee;
-    border-radius: 5px;
-
-  }
-}
-
-.clause {
-  display: none;
-}
-
-/* Scrollbar Styling */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #ebebeb;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  background: rgba(201, 78, 80, 0.2);;
-}
-
-//media
-
-@media (max-width: 1400px) {
-  .container {
-
-    flex-direction: column;
-
-  }
-  .main-content {
-    margin-top: 50px;
-    align-items: flex-start;
-  }
-  .main-content__container {
-    width: 90%;
-    height: 40%;
-  }
-}
-
-@media (max-width: 992px) {
-  .main-content__container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .main-content__tabs_style {
-    border-radius: 5px;
-  }
-
-  .main-content__profile-photo {
-    order: 2;
-  }
-
-  .main-content__photo {
-    min-width: auto;
-    min-height: 450px;
-  }
-
-  .main-content__short-contact-item {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-
-}
+//////////////////////////////////////////
 
 @media (max-width: 600px) {
   .main-content__item {
@@ -601,13 +47,12 @@ body {
 }
 
 
-
-
 //effects
 
 .speed {
   --animate-duration: 0.5s;
 }
+
 /*
 .custom-classes-transition-enter, .custom-classes-transition-leave-to !* .fade-leave-active до версии 2.1.8 *! {
   opacity: 0;
@@ -615,6 +60,6 @@ body {
 
 //test
 
-.test-container{
+.test-container {
   display: flex;
 }
