--- a/src/assets/summaryVue.css
+++ b/src/assets/summaryVue.css
@@ -1,97 +1,5 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap");
-body {
-  box-sizing: border-box;
-  background: #b4bad2;
-  font-family: Raleway;
-  font-weight: 300;
-  margin: 0;
-  padding: 0;
-  /*position: relative;
-  height: 500px;*/
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  position: fixed;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-
-.burger-open {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-}
-
-.burger-open_style {
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-}
-.burger-open_style i {
-  color: #373a47;
-}
-
-.burger-menu__burger-clause {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.burger-menu__burger-clause_style {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-.burger-menu__burger-clause_style i {
-  color: #bdc3c7;
-}
-
-.burger-menu {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  height: 100%;
-}
-
-.burger-menu_style {
-  background: #373a47;
-}
-
-.burger-menu__burger-items {
-  list-style: none;
-}
-
-.burger-menu__burger-item_style a {
-  text-decoration: none;
-  display: inline-block;
-  width: 270px;
-  height: 50px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  color: #fffef6;
-  font-weight: bold;
-  font-size: 1.2rem;
-}
-.burger-menu__burger-item_style a:hover i {
-  color: #c94e50;
-  transition: color 500ms;
-}
-.burger-menu__burger-item_style i {
-  color: #bdc3c7;
-  margin-right: 10px;
-}
-
-.burger-menu__burger-item_active i {
-  color: #c94e50;
-}
-
 .main-content {
   flex-grow: 1;
   display: flex;
@@ -114,6 +22,7 @@ body {
 
 .main-content__nav-buttons_style a {
   text-decoration: none;
+  cursor: pointer;
 }
 .main-content__nav-buttons_style a:first-child {
   border-radius: 10% 10% 0 0;
@@ -143,7 +52,7 @@ body {
 .main-content__item-button_style i {
   padding-bottom: 5px;
 }
-.main-content__item-button_style:after {
+.main-content__item-button_style:not(:last-child):after {
   content: "";
   position: absolute;
   right: 0;
@@ -258,7 +167,7 @@ body {
 
 .main-content__tabs {
   flex-grow: 1;
-  overflow: scroll;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   height: 500px;
@@ -377,6 +286,12 @@ body {
 
 .main-content__item_contact-width {
   min-width: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-content__item_contact-width p {
+  margin: 0 15px;
 }
 
 .main-content__item_full-flex {
@@ -485,6 +400,98 @@ body {
     padding-left: 15px;
   }
 }
+.burger-open {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+.burger-open_style {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+.burger-open_style i {
+  color: #373a47;
+}
+
+.burger-menu__burger-clause {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.burger-menu__burger-clause_style {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.burger-menu__burger-clause_style i {
+  color: #bdc3c7;
+}
+
+.burger-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 100%;
+}
+
+.burger-menu_style {
+  background: #373a47;
+}
+
+.burger-menu__burger-items {
+  list-style: none;
+}
+
+.burger-menu__burger-item_style a {
+  text-decoration: none;
+  display: inline-block;
+  width: 270px;
+  height: 50px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #fffef6;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.burger-menu__burger-item_style a:hover i {
+  color: #c94e50;
+  transition: color 500ms;
+}
+.burger-menu__burger-item_style i {
+  color: #bdc3c7;
+  margin-right: 10px;
+}
+
+.burger-menu__burger-item_active i {
+  color: #c94e50;
+}
+
+body {
+  box-sizing: border-box;
+  background: #b4bad2;
+  font-family: Raleway;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+  /*position: relative;
+  height: 500px;*/
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
 @media (max-width: 600px) {
   .main-content__item {
     flex: 100%;
